--- a/package.json
+++ b/package.json
@@ -39,8 +39,14 @@
 	"type": "module",
 	"dependencies": {
 		"@popperjs/core": "^2.11.8",
+		"@prisma/client": "^4.15.0",
+		"@supabase/auth-helpers-sveltekit": "^0.10.1",
+		"@supabase/auth-ui-shared": "^0.1.6",
+		"@supabase/auth-ui-svelte": "^0.2.2",
+		"@supabase/supabase-js": "^2.25.0",
 		"classnames": "^2.3.2",
 		"flowbite": "^1.6.5",
-		"flowbite-svelte": "^0.37.4"
+		"flowbite-svelte": "^0.37.4",
+		"prisma": "^4.15.0"
 	}
 }
