--- a/package.json
+++ b/package.json
@@ -27,26 +27,28 @@
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
+		"prisma": "^4.16.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"svelte-preprocess": "^5.0.3",
+		"sveltekit-superforms": "^1.2.0",
 		"tailwindcss": "^3.3.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0",
-		"vitest": "^0.25.3"
+		"vitest": "^0.25.3",
+		"zod": "^3.21.4"
 	},
 	"type": "module",
 	"dependencies": {
 		"@popperjs/core": "^2.11.8",
-		"@prisma/client": "^4.15.0",
+		"@prisma/client": "^4.16.1",
 		"@supabase/auth-helpers-sveltekit": "^0.10.1",
 		"@supabase/auth-ui-shared": "^0.1.6",
 		"@supabase/auth-ui-svelte": "^0.2.2",
 		"@supabase/supabase-js": "^2.25.0",
 		"classnames": "^2.3.2",
 		"flowbite": "^1.6.5",
-		"flowbite-svelte": "^0.38.4",
-		"prisma": "^4.15.0"
+		"flowbite-svelte": "^0.38.4"
 	}
 }
