--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"svelte": "^3.59.2",
 		"svelte-check": "^3.4.6",
 		"svelte-preprocess": "^5.0.4",
+		"sveltekit-search-params": "^1.0.14",
 		"sveltekit-superforms": "^1.2.0",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.6.0",
